--- a/test/reading_eks/readme
+++ b/test/reading_eks/readme
@@ -1,3 +1,5 @@
+== READING EKS ==
+
 This test is mainly to test the most advanced version of the eks language.
 
 This test is mainly for to test large structures and stupid designs.
